Cacher total leaderboard i localstorage

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width" />
 
     <title>Rouleur backup</title>
+    <script defer src="https://pro.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-+1nLPoB0gaUktsZJP+ycZectl3GX7wP8Xf2PE/JHrb7X1u7Emm+v7wJMbAcPr8Ge" crossorigin="anonymous"></script>
+    <script>
+      FontAwesomeConfig = { autoReplaceSvg: 'nest' }
+    </script>
   </head>
   <body>
     <noscript>
